--- a/decoratorsworkspace/index.html
+++ b/decoratorsworkspace/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
      <div id ='mydiv'></div>
-     <script src="classdecoratordemo.js" defer></script>
-     <script src="decoratorfactoryex.js" defer></script>
+     <!-- <script src="classdecoratordemo.js" defer></script>
+     <script src="decoratorfactoryex.js" defer></script> -->
+     
+     <script src ='test.js'></script>
+
 </body>
 </html>
